src/test/deca/syntax/invalid/homemade/test/test_pars_inv_class_instruction2.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur ( expected field after int)
//    
//
// Historique:
//    cree le 04/01/2023

class A {
    int x;
    int y;
    print(x+y);
}